@@ -1,3 +1,12 @@
+Fri Aug 01 13:50:34 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
+
+	* tools/RTComponentServer/RTComponentServer.mpc:
+	* tools/RTComponentServer/RTConfig_Manager.cpp:
+	* tools/RTComponentServer/RTConfig_Manager.h:
+	* tools/RTComponentServer/RTConfig_Manager.inl:
+	* tools/RTComponentServer/RTConfiguration.idl: Added code for
+	  managing named collection of RTCORBA related policies.
+
 Sun Jul 06 21:37:22 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
 
 	* tools/RTComponentServer/ComponentServer_Task.cpp (svc): Changed
